--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,7 @@
 linters:
   enable:
     - gofmt
-    - golint
+    - revive  # Replacing deprecated golint
     - govet
     - errcheck
     - staticcheck
@@ -10,9 +10,9 @@ linters:
 
 linters-settings:
   govet:
-    check-shadowing: true
-  golint:
-    min-confidence: 0.8
+    enable-all: true
+  revive:
+    confidence: 0.8
   errcheck:
     check-type-assertions: true
     check-blank: true
@@ -21,5 +21,5 @@ issues:
   exclude-rules:
     - path: _test\.go
       linters:
-        - golint
+        - revive
         - errcheck
