--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+        go test -coverprofile=coverage.txt -covermode=atomic -coverpkg=./... ./...
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
@@ -39,4 +39,6 @@ jobs:
         files: ./coverage.txt
         fail_ci_if_error: true
         verbose: true
-        directory: ./
+        root_dir: .
+        working-directory: .
+        flags: unittests
